<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeightMeter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user">User:</string>
    <string name="age">Age:</string>
    <string name="sex">Gender:</string>
    <string name="newUserTitle">Please enter new user data</string>
    <string name="btnTxt_OK">OK</string>
    <string name="hint_newName">please enter user name</string>
    <string name="hint_newAge">please enter your age</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnAddNewWeight">Add</string>
    <string name="btnOverview">Overview</string>
    <string name="btnChart">Chart</string>

</resources>
