<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytNewUserView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    tools:context=".Fs_newUser" >

    <TableLayout
        android:id="@+id/lytMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblTitle"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newUserTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            

            
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user" android:textAppearance="?android:attr/textAppearanceLarge" /><EditText
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_newName" >

                <requestFocus />
            </EditText></TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sex" android:textAppearance="?android:attr/textAppearanceLarge" /><EditText
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_newAge" />

</TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <NumberPicker
                android:id="@+id/npAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <Button
            android:id="@+id/btnNewUserOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTxt_OK" />

    </TableLayout>

</FrameLayout>
