<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytMainActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:clickable="true"
    android:minHeight="500px"
    tools:context=".Fs_mainActivity" >

	<TableLayout
	    android:id="@+id/lytMainActivity"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:fitsSystemWindows="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAddNewMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddNewWeight" />

            <Button
                android:id="@+id/btnOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOverview" />

            <Button
                android:id="@+id/btnChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnChart" />
        </TableRow>

    </TableLayout>

</FrameLayout>
